--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "一个基于uniapp，移动端全平台兼容的音乐播放器",
   "main": "main.js",
   "dependencies": {
+    "lyric-parser": "^1.0.1",
     "uni-read-pages": "^1.0.5",
     "uni-simple-router": "^2.0.7"
   },
